delete post and user endpoints + update docs and adjustment path root, redirect to swagger doc
