# api/controllers/user_controller.go
@@ -60,3 +60,21 @@ func (c UserController) Detail(ctx *gin.Context) {
 
 	response.Response{Code: http.StatusOK, Data: qr}.JSON(ctx)
 }
+
+// Destroy godoc
+//
+//	@Summary		Delete a User
+//	@Description	perform delete a user by username
+//	@Tags			user
+//	@Accept			json
+//	@Produce		json
+//	@Param			username  path  string  true  "Username"
+//	@Router			/users/{username} [delete]
+func (c UserController) Destroy(ctx *gin.Context) {
+	if err := c.userService.Delete(ctx.Param("username")); err != nil {
+		response.Response{Code: http.StatusBadRequest, Message: err}.JSON(ctx)
+		return
+	}
+	response.Response{Code: http.StatusNoContent}.JSON(ctx)
+	return
+}
