# api/routes/user_router.go
@@ -20,4 +20,5 @@ func NewUserRouter(handler lib.HttpHandler, userController controllers.UserContr
 func (r UserRouter) Setup() {
 	r.handler.Engine.GET("/users", r.userController.List)
 	r.handler.Engine.GET("/users/:username", r.userController.Detail)
+	r.handler.Engine.DELETE("/users/:username", r.userController.Destroy)
 }
